--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@line/liff": "^2.23.1",
+    "bootstrap": "^5.3.2",
+    "liff": "^1.2.0",
+    "next": "14.0.4",
     "react": "^18",
+    "react-bootstrap": "^2.9.2",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "react-toastify": "^9.1.3"
   }
 }
