--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18",
+    "react-router-dom": "^6.22.0",
     "react-toastify": "^9.1.3"
   }
 }
