--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "dependencies": {
     "@line/liff": "^2.23.1",
     "bootstrap": "^5.3.2",
+    "eslint-config-next": "^13.5.6",
     "liff": "^1.2.0",
-    "next": "14.0.4",
-    "react": "^18",
+    "next": "^13.5.6",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
-    "react-dom": "^18",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
     "react-toastify": "^9.1.3"
   }
